[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://skull_in_a_ufo_spacecraft/skull_in_a_ufo_spacecraft.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[node name="Player" type="Area2D"]

position = Vector2( 479.046, 287.803 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 400
Laser = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.264759, 0.124547 )
scale = Vector2( 2.27718, 1.31523 )
shape = SubResource( 2 )

[node name="laser_container" type="Node" parent="." index="2"]

[node name="laser_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="laser_dir" type="Position2D" parent="." index="4"]

_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]


